# tinyrenderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/tinyrenderer/: Drawer.hpp  Model.hpp  TGAImage.hpp  Vector.hpp
src/: CMakeLists.txt  Drawer.cpp  Model.cpp  TGAImage.cpp  Vector.cpp  main.cpp
test/: CMakeLists.txt  VectorTest.cpp  test.cpp
